--- a/index.html
+++ b/index.html
@@ -1,32 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Подписка на Telegram-канал</title>
+    <title>Интернет-магазин</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
         }
-        .subscribe-button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #0088cc;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .subscribe-button:hover {
-            background-color: #005f99;
-        }
-    </style>
-</head>
-<body>
-    <h1>Подпишитесь на наш Telegram-канал</h1>
-    <a href="https://t.me/your_channel_username" class="subscribe-button">Подписаться</a>
-</body>
-</html>
 
+        body.dark-mode {
+            background-color: #121212;
+            color: #ffffff;
+        }
+
+        header {
+            background-color: #333;
+            color: #ffffff;
+            padding: 1em;
+            text-align: center;
+            position: relative;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .menu-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #333;
+            border: 1px solid #ccc;
+            color: #ffffff;
+            padding: 0.5em;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s, transform 0.3s;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: sca
